randomized video start timings

- videoDuration MUST be provided as cli param (in mins)

    Gtk4MediaStream doesn't let you query duration properly. Always
    returns 0 for some reason. Check issue below
    https://gitlab.gnome.org/GNOME/gtk/-/issues/3914